<resources>
    <string name="app_name">RelativeLayoutMaterial</string>
    <string name="txtV_Monumento">Catedral de Málaga</string>
    <string name="txtV_TipoEntrada">Tipo de entrada</string>
    <string name="txtV_FechaVisita">Fecha de visita:</string>
    <string name="btn_Reservar">Reservar</string>
    <string name="btn_Comprar">Comprar</string>
    <string name="cntDesc">Desc de imagen</string>

    <string name="txtV_AdvancedCalc">Advanced Calculator</string>
    <string name="btn_1">1</string>
    <string name="btn_2">2</string>
    <string name="btn_3">3</string>
    <string name="btn_4">4</string>
    <string name="btn_5">5</string>
    <string name="btn_6">6</string>
    <string name="btn_7">7</string>
    <string name="btn_8">8</string>
    <string name="btn_9">9</string>
    <string name="btn_0">0</string>
    <string name="btn_Resultado">Resultado</string>
    <string name="btn_Borrar">Borrar</string>
</resources>
